# openfdap

./: readme.md
.github/workflows/: check.yml  pages.yml
source/: generate.sh  package.nix
source/fdap/: Cargo.toml  readme.md
source/fdap/src/: lib.rs
source/nixbuild/: Cargo.toml
source/openfdap/: Cargo.toml  readme.md
source/openfdap/src/: main.rs
source/openfdap/src/interface/: config.rs
