[package]
name = "fdap"
version = "0.1.1"
edition = "2021"
license = "ISC"
repository = "https://github.com/andrewbaxter/openfdap"
readme = "readme.md"
description = "Featherweight FDAP client library"

[dependencies]
http = "1"
htwrap = "0.5"
loga = "0.5"
serde_json = "1"
uri = "0.4"
urlencoding = "2"
