[package]
name = "openfdap"
version = "0.1.0"
edition = "2021"


[dependencies]
chrono = "0.4"
tokio = { version = "1", features = [
    "rt",
    "macros",
    "rt-multi-thread",
    "fs",
    "io-util",
] }
serde = { version = "1", features = ["derive"] }
tokio-util = { version = "0.7", features = ["compat", "io"] }
serde_json = "1"
futures = "0.3"
loga = "0.5"
taskmanager = { version = "0.6" }
hyper = { version = "1", features = ["server", "http1"] }
http-body-util = "0.1"
http-body = "1"
aargvark = { version = "0.6", features = ["serde_json", "serde_yaml"] }
hyper-util = { version = "0.1", features = ["tokio", "server-auto"] }
hyper-rustls = "0.27"
rustls = "0.23"
tower-service = "0.3"
http = "1"
tempfile = "3"
tokio-stream = { version = "0.1", features = ["net"] }
zbase32 = "0.1"
sha2 = { version = "0.10" }
urlencoding = "2"
htwrap = { version = "0.11" }
flowcontrol = "0.2"
schemars = "0.8"
